@@ -116,8 +116,8 @@ Transaction.prototype.setCloudContext = function (cloudContext) {
 }
 
 // Create a span on this transaction and make it the current span.
-Transaction.prototype.startSpan = function (...spanArgs) {
-  const span = this.createSpan(...spanArgs)
+Transaction.prototype.startSpan = function (...args) {
+  const span = this.createSpan(...args)
   if (span) {
     this._agent._instrumentation.supersedeWithSpanRunContext(span)
   }
@@ -129,7 +129,7 @@ Transaction.prototype.startSpan = function (...spanArgs) {
 // This does *not* replace the current run context to make this span the
 // "current" one. This allows instrumentations to avoid impacting the run
 // context of the calling code. Compare to `startSpan`.
-Transaction.prototype.createSpan = function (...spanArgs) {
+Transaction.prototype.createSpan = function (...args) {
   if (!this.sampled) {
     return null
   }
@@ -142,8 +142,23 @@ Transaction.prototype.createSpan = function (...spanArgs) {
     return null
   }
 
+  // Exit spans must not have child spans. The spec allows child spans "that
+  // have the same type and subtype", but this agent currently has no use for
+  // this case.
+  // https://github.com/elastic/apm/blob/master/specs/agents/tracing-spans.md#child-spans-of-exit-spans
+  const opts = typeof args[args.length - 1] === 'object'
+    ? (args.pop() || {})
+    : {}
+  opts.childOf = opts.childOf || this._agent._instrumentation.currSpan() || this
+  const childOf = opts.childOf
+  if (childOf instanceof Span && childOf._exitSpan) {
+    this._agent.logger.trace({ exitSpanId: childOf.id, newSpanArgs: args },
+      'createSpan: drop child span of exit span')
+    return null
+  }
+
   this._builtSpans++
-  return new Span(this, ...spanArgs)
+  return new Span(this, ...args, opts)
 }
 
 // Note that this only returns a complete result when called *during* the call
